# fabric-app

./: .gitignore  Cargo.toml  README.md  clippy.toml
crates/fabric_api/: Cargo.toml
crates/fabric_api/src/: auth.rs  client.rs  credentials.rs  lib.rs  macos_oauth.rs  runtime.rs  session.rs
crates/fabric_desktop/: Cargo.toml
crates/fabric_desktop/src/: app.rs  assets.rs  auth.rs  brand.rs  columns.rs  dashboard.rs  detail.rs  fleet_canvas.rs  fleet_layout.rs  fleet_ops.rs  fleets.rs  format.rs  login.rs  main.rs  nav.rs  network.rs  overview.rs  search_input.rs  sparkline.rs  theme.rs
crates/fabric_desktop/src/charts/: metric_chart.rs  mod.rs
crates/fabric_desktop/src/topology/: controls.rs  explorer.rs  gallery.rs  images.rs  mod.rs  picker.rs  previews.rs  timeline.rs
crates/fabric_health/: Cargo.toml
crates/fabric_health/src/: lib.rs  metrics.rs  output.rs  runs.rs
crates/fabric_live/: Cargo.toml
crates/fabric_live/src/: lib.rs  patch.rs
crates/fabric_types/: Cargo.toml
crates/fabric_types/src/: auth.rs  fleets.rs  lib.rs  runspec.rs  series.rs  topology.rs  viz.rs
crates/fabric_viz/: Cargo.toml
crates/fabric_viz/src/: colormap.rs  drive.rs  eligible.rs  fab.rs  geometry.rs  lib.rs  quant8.rs
docs/: topology-explorer-spec.md
fixtures/: checkpoints.json  runs_summary.json  topo_manifest.json  viz_recon_step.json
