[workspace]
resolver = "2"
members = [
    "crates/fabric_types",
    "crates/fabric_api",
    "crates/fabric_live",
    "crates/fabric_desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/blackstar-inc/fabric-app"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPUI — GPU-accelerated UI (Metal on macOS). Pin to the same Zed release tag.
gpui = { git = "https://github.com/zed-industries/zed", tag = "v1.7.2", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", tag = "v1.7.2", package = "gpui_platform", features = ["font-kit"] }

fabric_types = { path = "crates/fabric_types" }
fabric_api = { path = "crates/fabric_api" }
fabric_live = { path = "crates/fabric_live" }
