[package]
name = "fabric_api"
description = "HTTP client for the Fabric portal control-plane API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
fabric_types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
block2 = { version = "0.6", features = ["alloc"] }
dispatch2 = "0.3"
objc2 = { version = "0.6", features = ["std"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow"] }
objc2-authentication-services = { version = "0.3", default-features = false, features = [
    "std",
    "ASWebAuthenticationSession",
    "ASWebAuthenticationSessionCallback",
    "block2",
    "ASFoundation",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSError"] }
