[package]
name = "fabric_viz"
description = "Pure-Rust visualizer helpers (quant8 decode, FAB1 parse, colormap, eligibility)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
fabric_types = { workspace = true }
serde_json = { workspace = true }
